edge/disease.proxy.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: disease.sh.ingress
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts: 
      - disease.sh
      secretName: disease.sh
  rules:
    - host: disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: disease
              servicePort: 8443
